--- a/Copy yt.html
+++ b/Copy yt.html
@@ -1,27 +1,38 @@
 
-<h> !!Youtube!!</h>
+<h> 
+    <button> !!Youtube;
 
+    </button> 
+    
+</h>
+
+<p>
+<Style>
+    .Youtube-Button{
+        background-color: transparent;
+        border: none;
+        border-style: solid;
+        color:red
+    }
+</Style>
+</p>
+
+<h1> 
 <stlye> 
-p {
-    font-family: Times New Roman;
-    margin-top: 0;
-    margin-bottom; 0;
-}
+    .
+    <font-family> 
+        Arial 
+    </font-family>
+    <font-size> 
+        30 px
+    </font-size:>        
+    }
+</h1>
 
-.video-stats {
-    font-size: 14px;
-    color: rgb(96, 96, 96);
-    margin-bottom: 20px
-}
+<p class="video">
+    3.4M views &#183; 6 months ago
+</p>
 
-.video-title { 
-    font-weight: bold;
-    font-size: 18px;
-    width: 280px;
-    line-height: 24px;
-    margin-bottom: 5px;
-}
-
-
-</style>
-
+<p class="video title">
+    Talking Tech and AI with Google CEO Sundar Pichai!
+</p> 
